# pdf_harvest

./: .pre-commit-config.yaml  README.md  config.yaml  core_pdf_scanner_batch.py  doi_data_pite_2025.xlsx  pyproject.toml
.github/workflows/: ci.yml
output/: report.csv  report.xlsx
output/cache/crossref/: 10.1016_j.physe.2023.115833.json  10.1016_j.physletb.2024.139007.json  10.1140_epjc_s10052-024-12994-1.json  10.1140_epjc_s10052-024-13076-y.json  10.1140_epjc_s10052-024-13215-5.json  10.1140_epjs_s11734-024-01164-9.json
output/cache/unpaywall/: 10.1016_j.physe.2023.115833.json  10.1016_j.physletb.2024.139090.json  10.1140_epjc_s10052-024-12994-1.json  10.1140_epjc_s10052-024-13076-y.json  10.1140_epjc_s10052-024-13215-5.json  10.1140_epjs_s11734-024-01164-9.json
src/pdfharvest/: __init__.py  cache.py  cli.py  config.py  http.py  logging.py  orchestrator.py  pdfops.py
src/pdfharvest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_cache.py  test_cli.py  test_config.py  test_http.py  test_logging.py  test_orchestrator.py  test_pdfops.py
