[project]
name = "pdfharvest"
version = "1.0.0"
description = "Batched DOI harvester using Crossref and Unpaywall"
authors = [{ name = "Tu Nombre", email = "tu@correo.com" }]
requires-python = ">=3.10"
dependencies = [
    "httpx",
    "pandas",
    "pypdf",
    "pyyaml",
    "tqdm",
    "typer",
]

[project.scripts]
pdfharvest = "pdfharvest.cli:cli"
